# InkTree

./: .gitignore  Cargo.toml  README.md  rustc-ice-2025-09-04T16_32_22-10948.txt  rustc-ice-2025-12-10T21_00_08-18460.txt  rustc-ice-2025-12-10T21_00_13-18499.txt  rustc-ice-2025-12-10T21_00_20-18654.txt  rustc-ice-2025-12-10T21_00_36-18679.txt  rustc-ice-2025-12-10T21_00_38-18717.txt  rustc-ice-2025-12-10T21_00_47-18855.txt  rustc-ice-2025-12-10T21_00_51-18878.txt  rustc-ice-2025-12-10T21_00_57-18889.txt  rustc-ice-2025-12-10T21_01_03-18911.txt  rustc-ice-2025-12-10T21_01_08-18953.txt  rustc-ice-2025-12-10T21_01_20-19114.txt  rustc-ice-2025-12-10T21_01_27-19153.txt  rustc-ice-2025-12-10T21_02_35-19319.txt  rustc-ice-2025-12-10T21_02_42-19365.txt  rustc-ice-2025-12-10T21_02_51-19520.txt  rustc-ice-2025-12-10T21_03_14-19822.txt  rustc-ice-2025-12-10T21_03_20-19883.txt  rustc-ice-2025-12-10T21_03_27-20024.txt  rustc-ice-2025-12-10T21_58_15-21565.txt  rustc-ice-2025-12-10T21_58_24-21604.txt  rustc-ice-2025-12-10T21_58_39-21632.txt  rustc-ice-2025-12-10T21_59_52-21663.txt  rustc-ice-2025-12-10T22_00_01-21701.txt  rustc-ice-2025-12-10T22_00_08-21730.txt  rustc-ice-2025-12-10T22_00_12-21756.txt  rustc-ice-2025-12-10T22_00_30-21855.txt  rustc-ice-2025-12-10T22_00_49-21883.txt
inktree/: Cargo.toml
inktree-derive/: Cargo.toml
inktree-derive/src/: lib.rs
inktree-derive/src/ast/: shape.rs
inktree-derive/src/attributes/: allowed.rs  attributes.rs  error.rs  node.rs  pratt.rs  rule.rs  static_token.rs  token.rs
inktree-derive/src/language/: element.rs  language.rs  mod.rs
inktree-derive/src/parser/: dsl.rs  from_meta.rs  mir.rs
inktree-derive/src/properties/: ast.rs  delimiters.rs  extra.rs  keyword.rs  mod.rs  operator.rs  padding.rs  recovery.rs  root.rs  whitespace.rs
inktree/src/: lib.rs  macros.rs  rule_graph.rs  util.rs
inktree/src/ast/: mod.rs  state.rs
inktree/src/chumsky_ext/: builder.rs  extra.rs  mod.rs  parser.rs
inktree/src/derive/: mod.rs
inktree/src/engine/: builder.rs  mod.rs  (+5 more)
tree_gen/: Cargo.toml
tree_gen/src/: error.rs  lib.rs  util.rs
(+134 files in other folders)
