[package]
name = "inktree-derive"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0" }
quote = "1.0"
proc-macro2 = "1.0"
inktree = { version = "0.1.0", path = "../inktree" }
snafu = "0.8.9"
strum = { version = "0.27.2", features = ["derive"] }
derive_more = { version = "2.1.0", features = ["from"] }
itertools = "0.14.0"
enum_dispatch = "0.3.13"
chumsky = { version = "0.11.2", features = ["pratt"] }
regex-syntax = "0.8.8"
derivative = "2.2.0"
