[package]
name = "tree_gen"
version = "0.1.0"
edition = "2024"

[dependencies]
chumsky = { version = "0.10.1", features = ["extension"] }
cstree = { version = "0.12.2"}
proc-macro2 = "1.0.95"
quote = "1.0.40"
regex-syntax = "0.8.5"
snafu = "0.8.6"
syn = "2.0.101"
tree_gen_derive = { path = "../tree_gen_derive", optional = true }

[features]
default = []
derive = ["dep:tree_gen_derive"]
